Contract fix on Mobile

--- a/src/components/UserProfile.css
+++ b/src/components/UserProfile.css
@@ -852,7 +852,7 @@ input[type="date"],
 .contract-parsed-section h4 {
   margin-bottom: 0.4rem;
   font-size: 1.1rem;
-  color: #1b3656;
+  color: #6b90ff;
 }
 
 .contract-parsed-section p {
@@ -928,10 +928,10 @@ input[type="date"],
   }
 
 .contract-form-container{
-  width: 100%;
- 
+  width: 90%;
   margin: 0;
   padding: 1rem;
+ 
 }
 
 .invoice-table-container {
@@ -944,7 +944,7 @@ input[type="date"],
   border-collapse: collapse;
   margin-top: 20px;
   font-family: Arial, sans-serif;
-    font-size: 12px; 
+    font-size: 10px; 
 }
 
 .invoice-table thead {
@@ -1002,6 +1002,14 @@ input[type="date"],
   background-color: #6b90ff;
   color: white;
   align-self: flex-end;
+}
+
+.contract-card-accordion{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 8%;
+  margin-left: 0%;
 }
 }
 
@@ -1563,6 +1571,8 @@ input[type="date"],
   margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+
 }
 
 .modal-content h3{
@@ -1571,3 +1581,83 @@ input[type="date"],
 }
 
 
+@media screen and (max-width: 390px) {
+
+.contract-form-container{
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+ 
+}
+
+.invoice-table-container {
+    /* ✅ allows horizontal scroll on small screens */
+  width: 100%;
+       /* ✅ optional horizontal padding */
+}
+.invoice-table {
+  max-width: 100px !important; /* ✅ prevents table from shrinking too much */
+  border-collapse: collapse;
+  margin-top: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 9px; 
+}
+
+.invoice-table thead {
+  background-color: #6b90ff;
+  color: white;
+
+
+}
+.contract-search-button{
+  width: 30%;
+}
+
+.invoice-table th,
+.invoice-table td {
+  border: 1px solid #dbe4f3;
+  padding: 10px;
+  text-align: left;
+  
+}
+
+.invoice-table input {
+  width: 80%;
+  padding: 6px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.invoice-table tbody tr:nth-child(even) {
+  background-color: #ecf0fc;
+  
+}
+
+.add-row-button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #6b90ff;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.invoice-table-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  gap: 10px
+}
+.summary-bar {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 1.1rem;
+  margin-top: 2rem;
+  background-color: #6b90ff;
+  color: white;
+  align-self: flex-end;
+}
+  
+}
